--- a/PUST1.tex
+++ b/PUST1.tex
@@ -128,5 +128,8 @@ Wydział Elektroniki i Technik Informacyjnych}}\\
 \maketitle
 
 \tableofcontents
+\part{Projekt}
+\label{PROJEKT}
+\input{ZAD1}
 \appendix
 \end{document}
