--- a/PUST1.tex
+++ b/PUST1.tex
@@ -131,5 +131,6 @@ Wydział Elektroniki i Technik Informacyjnych}}\\
 \part{Projekt}
 \label{PROJEKT}
 \input{ZAD1}
+\input{ZAD2}
 \appendix
 \end{document}
