--- a/ZAD1.tex
+++ b/ZAD1.tex
@@ -1,11 +1,11 @@
-\chapter{Zadanie 1}
+\chapter{Weryfikacja punktu pracy}
 \label{zad1}
 
 \section{Opis postępowania}
 \label{zad1_opis}
 W celu sprawdzenia poprawności wartości sygnałów $U_{\mathrm{pp}}$ i $Y_{\mathrm{pp}}$ pobudzono obiekt sterowaniem
-o wartości $U_{\mathrm{pp}}= \num{2.0}$ i sprawdzeniu czy stabilizuje się on w punkcjie pracy  $Y_{\mathrm{pp}}= \num{2.0}$. Do symulacji wyjscia obiektu użyto udostępnionej funkcji 
-\verb+symulacja_obiektu4Y.+ Do testów użyto napisanego skryptu \verb+PROJ1_1.m. + Wyniki przedstawiono na poniżej.
+o wartości $U_{\mathrm{pp}}= \num{2.0}$ i sprawdzeniu czy stabilizuje się on w punkcjie pracy  $Y_{\mathrm{pp}}= \num{0.8}$. Do symulacji wyjscia obiektu użyto udostępnionej funkcji 
+\verb+symulacja_obiektu4Y.+ Do testów napisano skrypt \verb+PROJ1_1.m. + Wyniki przedstawiono poniżej.
 
 \section{Wyniki}
 \label{zad1_wyniki}
