--- a/PUST1.tex
+++ b/PUST1.tex
@@ -30,7 +30,7 @@
 \SendSettingsToPgf
 %konfiguracje pakietu listings
 \lstset{
-	backgroundcolor=\color{szary},
+	backgroundcolor=\color{gray},
 	frame=single,
 	breaklines=true,
 }
@@ -132,5 +132,6 @@ Wydział Elektroniki i Technik Informacyjnych}}\\
 \label{PROJEKT}
 \input{ZAD1}
 \input{ZAD2}
+\input{ZAD3}
 \appendix
 \end{document}
