--- a/ZAD2.tex
+++ b/ZAD2.tex
@@ -19,22 +19,22 @@
     \addlegendentry{$\Delta u = \num{0,1}$},
     \addlegendentry{$\Delta u = \num{0,2}$}
     \addlegendentry{$\Delta u = \num{0,5}$},
-    	\addlegendimage{no markers,green}
-	\addlegendimage{no markers,red}
-	\addlegendimage{no markers,yellow}
+    	\addlegendimage{no markers,red}
+	\addlegendimage{no markers,green}
+	\addlegendimage{no markers,blue}
     \addplot[red, semithick, thick] file{Rysunki/PROJ1_2Uskok=2.1.txt};
     \addplot[green, semithick, thick] file{Rysunki/PROJ1_2Uskok=2.2.txt};
-    \addplot[yellow, semithick, thick] file{Rysunki/PROJ1_2Uskok=2.5.txt};
+    \addplot[blue, semithick, thick] file{Rysunki/PROJ1_2Uskok=2.5.txt};
 
 
     
     \end{axis}
     \end{tikzpicture}
-    \caption{Odpowiedzi procesu na skokowe zmiany sterowanie}
+    \caption{Odpowiedzi procesu na skokowe zmiany sterowania w momencie k=11}
     \label{zad2_porow_odp_skok}
 \end{figure}
 
-W celu wyznaczenia odpowiedzi skokowej obiekt, znajdujący się w punkcie pracy (tzn. $U_{\mathrm{pp}}= \num{2.0}$,$Y_{\mathrm{pp}}= \num{0.8}$) pobudzoną różną zmianą wartoci sterowań. Wykres \ref{zad2_skoki_wykres} przedstawia odpowiedź obiektu na jego różne wartosci.
+W celu wyznaczenia odpowiedzi skokowej obiekt, znajdujący się w punkcie pracy (tzn. $U_{\mathrm{pp}}= \num{2.0}$,$Y_{\mathrm{pp}}= \num{0.8}$) pobudzoną różną zmianą wartoci sterowań. Rysunek \ref{zad2_skoki_wykres} przedstawia odpowiedź obiektu na jego różne wartosci.
 
 \section{Wyznaczanie charakterystyki statycznej procesu}
 \label{zad2_char_stat}
