--- a/PUST1.tex
+++ b/PUST1.tex
@@ -133,5 +133,6 @@ Wydział Elektroniki i Technik Informacyjnych}}\\
 \input{ZAD1}
 \input{ZAD2}
 \input{ZAD3}
+\input{PID1}
 \appendix
 \end{document}
