--- a/PID1.tex
+++ b/PID1.tex
@@ -88,8 +88,12 @@ for k=12:sim_len
 
 \section{Ręczne strojenie regulatora PID}
 
+\subsection{Wyliczenie wstępnych parametrów regulatora}
+
 W celu dobrania wstępnych parametrów regulatora PID użyto metody eksperymentalnej; przeprowadzono dużą ilosc symulacji dla arbitralnych wartosci $K_{\mathrm{r}}$,  $T_{\mathrm{i}}$, $T_{\mathrm{d}}$. Sposrod ponad 100 symulacji, wybrano te parametry, których wskaźnik jakoci był najlepszy. Stało się to dla regulatora przedstawionego na rysunku \ref{PID_0}.
 \begin{figure}[t]
+    
+    \textbf{E=\num{6.81}}
     \centering
     \begin{tikzpicture}
     \begin{axis}[
@@ -102,16 +106,16 @@ W celu dobrania wstępnych parametrów regulatora PID użyto metody eksperymenta
     legend pos=south east,
     y tick label style={/pgf/number format/1000 sep=},
     ]
-    \addplot[blue, semithick] file{rysunki/PROJ1_PID_EXPerror=6.81K=1Ti=8Td=1.txt};
+    \addplot[blue, semithick] file{rysunki/PROJ1_PID_EXPerror=6.81K=1Ti=4Td=0.5.txt};
     \addplot[red, semithick] file{rysunki/PROJ1_4_Yzad.txt};
-    \addlegendentry{$y^{zad}[k]$},
     \addlegendentry{$y[k]$},
+    \addlegendentry{$y^{zad}[k]$},
     \addlegendimage{no markers, blue}
 	\addlegendimage{no markers, red}
     \end{axis}
     \end{tikzpicture}
-    \caption{Niegasnące oscylacje wyjścia obiektu przy wzmocnieniu krytycznym}
-    \label{zad5_niegasnace_oscylacje}
+    \caption{Wyjscie dla $K_{\mathrm{r}}$=\num{1},  $T_{\mathrm{i}}$=\num{4}, $T_{\mathrm{d}}$=\num{0.5}}
+    \label {PID_0}
 \end{figure}
 
 \begin{figure}[b]
@@ -127,13 +131,230 @@ W celu dobrania wstępnych parametrów regulatora PID użyto metody eksperymenta
     legend pos=south east,
     y tick label style={/pgf/number format/1000 sep=},
     ]
-    \addplot[const plot, blue, semithick] file{rysunki/PROJ1_PID_EXP_STERerror=6.81K=1Ti=8Td=1.txt};
+    \addplot[const plot, blue, semithick] file{rysunki/PROJ1_PID_EXP_STERerror=6.81K=1Ti=4Td=0.5.txt};
     \legend{$u[k]$}
     \end{axis}
     \end{tikzpicture}
-    \caption{Przebieg sygnału sterującego }
-    \label{zad5_niegasnace_oscylacje_ster}
+    \caption{Sterowanie dla $K_{\mathrm{r}}$=\num{1},  $T_{\mathrm{i}}$=\num{4}, $T_{\mathrm{d}}$=\num{0.5} }
+    
 \end{figure}
 \FloatBarrier
 
 
+\subsection{Zmniejszenie przeregulowania}
+
+W celu zmniejszenia znacznego przeregulowania występującego w regulatorze zmniejszono jego wzmocnienie do  $K_{\mathrm{r}}$=\num{0.8} oraz dodatkowo zmieniono parametr członu różniczkującego do $T_{\mathrm{d}}$=\num{0.25}. Wyniki symulacji dla zmienionego regulatora przedstawone zostały na rysunku \ref{PID_1}.
+
+
+\begin{figure}[t]
+    
+    \textbf{E=\num{6.51}}
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=0.4, ymax=1.2,
+    xlabel={$k$},
+    ylabel={$y[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={0.4,0.6,0.8,1.0,1.2},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[blue, semithick] file{rysunki/PROJ1_PID_EXPerror=6.51K=0.8Ti=4Td=0.25.txt};
+    \addplot[red, semithick] file{rysunki/PROJ1_4_Yzad.txt};
+    \addlegendentry{$y[k]$},
+    \addlegendentry{$y^{zad}[k]$},
+    \addlegendimage{no markers, blue}
+	\addlegendimage{no markers, red}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Wyjscie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{4}, $T_{\mathrm{d}}$=\num{0.25}}
+    \label {PID_1}
+\end{figure}
+
+\begin{figure}[b]
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=1.2, ymax=2.8,
+    xlabel={$k$},
+    ylabel={$u[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={1.2,1.6,2.0,2.4,2.8},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[const plot, blue, semithick] file{rysunki/PROJ1_PID_EXP_STERerror=6.51K=0.8Ti=4Td=0.25.txt};
+    \legend{$u[k]$}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Sterowanie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{4}, $T_{\mathrm{d}}$=\num{0.25} }
+    
+\end{figure}
+\FloatBarrier
+
+\subsection{Dalsze zmniejszenie przeregulowania}
+
+Przeregulowanie ciągle występuję w dosc znacznym stopniu, dlatego w następnym kroku zmneijeszono całkowanie do $T_{\mathrm{i}}$=\num{5} oraz dodatkowo zmniejszono różniczkowanie do 
+$T_{\mathrm{d}}$=\num{0.05}. Wyniki symulacji dla zmienionego regulatora przedstawione zostały na rysunku \ref{PID_2}.
+
+
+\begin{figure}[t]
+    
+    \textbf{E=\num{5.95}}
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=0.4, ymax=1.2,
+    xlabel={$k$},
+    ylabel={$y[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={0.4,0.6,0.8,1.0,1.2},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[blue, semithick] file{rysunki/PROJ1_PID_EXPerror=5.95K=0.8Ti=5Td=0.05.txt};
+    \addplot[red, semithick] file{rysunki/PROJ1_4_Yzad.txt};
+    \addlegendentry{$y[k]$},
+    \addlegendentry{$y^{zad}[k]$},
+    \addlegendimage{no markers, blue}
+	\addlegendimage{no markers, red}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Wyjscie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{5}, $T_{\mathrm{d}}$=\num{0.05}}
+    \label {PID_2}
+\end{figure}
+
+\begin{figure}[b]
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=1.2, ymax=2.8,
+    xlabel={$k$},
+    ylabel={$u[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={1.2,1.6,2.0,2.4,2.8},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[const plot, blue, semithick] file{rysunki/PROJ1_PID_EXP_STERerror=5.95K=0.8Ti=5Td=0.05.txt};
+    \legend{$u[k]$}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Sterowanie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{5}, $T_{\mathrm{d}}$=\num{0.95} }
+    
+\end{figure}
+\FloatBarrier
+
+
+\subsection{Przyspieszenie regulatora}
+
+W celu zwiększenia szybkosci regulatora zwiększono jego wzmocnienie do  $K_{\mathrm{r}}$=\num{2.4} oraz w ramach kompensacji zmniejszono całkowanie do $T_{\mathrm{i}}$=\num{8}. Wyniki symulacji dla zmienionego regulatora przedstawione zostały na rysunku \ref{PID_3}.
+
+
+\begin{figure}[t]
+    
+    \textbf{E=\num{5.14}}
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=0.4, ymax=1.2,
+    xlabel={$k$},
+    ylabel={$y[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={0.4,0.6,0.8,1.0,1.2},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[blue, semithick] file{rysunki/PROJ1_PID_EXPerror=5.14K=2.4Ti=8Td=0.05.txt};
+    \addplot[red, semithick] file{rysunki/PROJ1_4_Yzad.txt};
+    \addlegendentry{$y[k]$},
+    \addlegendentry{$y^{zad}[k]$},
+    \addlegendimage{no markers, blue}
+	\addlegendimage{no markers, red}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Wyjscie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{5}, $T_{\mathrm{d}}$=\num{0.05}}
+    \label {PID_3}
+\end{figure}
+
+\begin{figure}[b]
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=1.2, ymax=2.8,
+    xlabel={$k$},
+    ylabel={$u[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={1.2,1.6,2.0,2.4,2.8},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[const plot, blue, semithick] file{rysunki/PROJ1_PID_EXP_STERerror=5.14K=2.4Ti=8Td=0.05.txt};
+    \legend{$u[k]$}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Sterowanie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{5}, $T_{\mathrm{d}}$=\num{0.05} }
+    
+\end{figure}
+\FloatBarrier
+
+\subsection{Człon różniczkujący}
+
+Podczas wczesniejszego strojenia zauważono fakt, iż zmniejszenie członu różniczkującego pozytywnie wpływa na jakosć regulacji. Postanowiono więc znacznie go zmniejszyć, do wartosci $T_{\mathrm{d}}$=\num{0.0005}. Wyniki symulacji dla zmienionego regulatora przedstawione zostały na rysunku \ref{PID_4}.
+
+
+\begin{figure}[t]
+    
+    \textbf{E=\num{4.94}}
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=0.4, ymax=1.2,
+    xlabel={$k$},
+    ylabel={$y[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={0.4,0.6,0.8,1.0,1.2},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[blue, semithick] file{rysunki/PROJ1_PID_EXPerror=4.94K=2.4Ti=8Td=5e-05.txt};
+    \addplot[red, semithick] file{rysunki/PROJ1_4_Yzad.txt};
+    \addlegendentry{$y[k]$},
+    \addlegendentry{$y^{zad}[k]$},
+    \addlegendimage{no markers, blue}
+	\addlegendimage{no markers, red}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Wyjscie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{5}, $T_{\mathrm{d}}$=\num{0.05}}
+    \label {PID_4}
+\end{figure}
+
+\begin{figure}[b]
+    \centering
+    \begin{tikzpicture}
+    \begin{axis}[
+    width=0.98\textwidth,
+    xmin=0,xmax=1200,ymin=1.2, ymax=2.8,
+    xlabel={$k$},
+    ylabel={$u[k]$},
+    xtick={0, 300,600,900,1200},
+    ytick={1.2,1.6,2.0,2.4,2.8},
+    legend pos=south east,
+    y tick label style={/pgf/number format/1000 sep=},
+    ]
+    \addplot[const plot, blue, semithick] file{rysunki/PROJ1_PID_EXP_STERerror=4.94K=2.4Ti=8Td=5e-05.txt};
+    \legend{$u[k]$}
+    \end{axis}
+    \end{tikzpicture}
+    \caption{Sterowanie dla $K_{\mathrm{r}}$=\num{0.8},  $T_{\mathrm{i}}$=\num{5}, $T_{\mathrm{d}}$=\num{0.05} }
+    
+\end{figure}
+\FloatBarrier
