--- a/PUST1.tex
+++ b/PUST1.tex
@@ -137,9 +137,8 @@ Wydział Elektroniki i Technik Informacyjnych}}\\
 \input{ZAD3}
 \input{PID1}
 \input{DMC1}
-\input{DMC4.tex}
 
-
+\part{Laboratoria}
 
 \appendix
 \end{document}
