--- a/zad3l.tex
+++ b/zad3l.tex
@@ -2,4 +2,9 @@
 \begin{center}
 	\input{./skrypty/skok_jedn.tex}
 \end{center}
-Do otrzymania odpowiedzi skokowej wykorzystywanej w algorytmie DMC u¿yliœmy pomiarów uzyskanych przy skoku wartoœci sterowania o 40.
+Do otrzymania odpowiedzi skokowej wykorzystywanej w algorytmie DMC u¿yliœmy pomiarów uzyskanych przy skoku wartoœci sterowania o 40. Nastêpnie dokonaliœmy aproksymacji uzyskanej odpowiedzi u¿ywaj¹c cz³onu inercyjnego drugiego rzêdu z opóŸnieniem. 
+
+\begin{center}
+	\input{./skrypty/skok_apro.tex}
+\end{center}
+Wynik taki otrzymaliœmy korzystaj¹c z funkcji fmincon d¹¿¹c do minimalizacji b³êdu œredniokwadratowego aproksymacji.
