--- a/zad3l.tex
+++ b/zad3l.tex
@@ -7,4 +7,8 @@ Do otrzymania odpowiedzi skokowej wykorzystywanej w algorytmie DMC u¿yliœmy pomi
 \begin{center}
 	\input{./skrypty/skok_apro.tex}
 \end{center}
+\begin{equation}
+G(s)=\frac{\num{0.2859}}{(\num{42}s+1)(\num{43}+1)}e^{-3s}
+\nonumber
+\end{equation}
 Wynik taki otrzymaliœmy korzystaj¹c z funkcji fmincon d¹¿¹c do minimalizacji b³êdu œredniokwadratowego aproksymacji.
